[package]
name = "mycfg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"

[lib]
name = "frontend"
path = "src/frontend.rs"

[[bin]]
name = "debug"
path = "src/bin/debug.rs"

[[bin]]
name = "cfg"
path = "src/bin/cfg.rs"